syntax = "proto3";

option go_package = "heartbeat.v1";
package heartbeat.v1;

import "google/protobuf/empty.proto";

service HeartbeatService {
    // Server heartbeat request
    rpc HeartbeatRequest(google.protobuf.Empty) returns (HeartbeatServiceResponse) {}
}

message HeartbeatServiceResponse {
    bool up = 1;
    ServiceStatus status = 2;
}

enum ServiceStatus {
    SERVICE_UP = 0;
    SERVICE_DOWN = 1;
    SERVICE_BUSY = 2;
    SERVICE_UNAVAILABLE = 3;
}